# WinRPiPlay

./: .gitignore  CMakeLists.txt  README.md  rpiplay.cpp
lib/: CMakeLists.txt  byteutils.c  compat.h  dnssd.c  httpd.c  mirror_buffer.c  raop.c  raop_buffer.c  raop_handlers.h  raop_ntp.c  raop_rtp.c  raop_rtp.h  raop_rtp_mirror.c  threads.h
renderers/: CMakeLists.txt  audio_renderer.h  audio_renderer_dummy.c  audio_renderer_gstreamer.c  audio_renderer_rpi.c  audio_renderer_sdl.c  video_renderer.h  video_renderer_dummy.c  video_renderer_sdl.c
